mlg1/parser/mlg1Parser.py
# Generated from mlg1.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class mlg1Parser ( Parser ):

    grammarFileName = "mlg1.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'#'", "'include'", "'$'", "'define'", 
                     "'-'", "'fn'", "'('", "')'", "','", "'{'", "'}'", "'='", 
                     "'['", "']'", "'if'", "'else'", "'while'", "'return'", 
                     "'break'", "'continue'", "'!'", "'+'", "'*'", "'/'", 
                     "'%'", "'<'", "'=='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "META_VARIABLE_NAME", "VARIABLE_KEYWORD", "NAME", 
                      "INTEGER", "STRING", "LINE_COMMENT", "WS" ]

    RULE_program = 0
    RULE_metaVariable = 1
    RULE_includeFile = 2
    RULE_loadFile = 3
    RULE_constantDefinition = 4
    RULE_signedInteger = 5
    RULE_function = 6
    RULE_parameterList = 7
    RULE_block = 8
    RULE_statement = 9
    RULE_variableDeclaration = 10
    RULE_assignment = 11
    RULE_arrayDeclaration = 12
    RULE_arraySize = 13
    RULE_ifStatement = 14
    RULE_elseStatement = 15
    RULE_whileLoop = 16
    RULE_returnStatement = 17
    RULE_breakStatement = 18
    RULE_continueStatement = 19
    RULE_functionCall = 20
    RULE_expressionList = 21
    RULE_expression = 22
    RULE_unaryExpression = 23
    RULE_primary = 24
    RULE_unaryOperator = 25
    RULE_operator = 26

    ruleNames =  [ "program", "metaVariable", "includeFile", "loadFile", 
                   "constantDefinition", "signedInteger", "function", "parameterList", 
                   "block", "statement", "variableDeclaration", "assignment", 
                   "arrayDeclaration", "arraySize", "ifStatement", "elseStatement", 
                   "whileLoop", "returnStatement", "breakStatement", "continueStatement", 
                   "functionCall", "expressionList", "expression", "unaryExpression", 
                   "primary", "unaryOperator", "operator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    META_VARIABLE_NAME=28
    VARIABLE_KEYWORD=29
    NAME=30
    INTEGER=31
    STRING=32
    LINE_COMMENT=33
    WS=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def metaVariable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(mlg1Parser.MetaVariableContext)
            else:
                return self.getTypedRuleContext(mlg1Parser.MetaVariableContext,i)


        def includeFile(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(mlg1Parser.IncludeFileContext)
            else:
                return self.getTypedRuleContext(mlg1Parser.IncludeFileContext,i)


        def loadFile(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(mlg1Parser.LoadFileContext)
            else:
                return self.getTypedRuleContext(mlg1Parser.LoadFileContext,i)


        def constantDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(mlg1Parser.ConstantDefinitionContext)
            else:
                return self.getTypedRuleContext(mlg1Parser.ConstantDefinitionContext,i)


        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(mlg1Parser.FunctionContext)
            else:
                return self.getTypedRuleContext(mlg1Parser.FunctionContext,i)


        def getRuleIndex(self):
            return mlg1Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = mlg1Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 54
                self.metaVariable()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 60
                self.includeFile()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 66
                self.loadFile()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 72
                self.constantDefinition()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 78
                self.function()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MetaVariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def META_VARIABLE_NAME(self):
            return self.getToken(mlg1Parser.META_VARIABLE_NAME, 0)

        def INTEGER(self):
            return self.getToken(mlg1Parser.INTEGER, 0)

        def getRuleIndex(self):
            return mlg1Parser.RULE_metaVariable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMetaVariable" ):
                listener.enterMetaVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMetaVariable" ):
                listener.exitMetaVariable(self)




    def metaVariable(self):

        localctx = mlg1Parser.MetaVariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_metaVariable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(mlg1Parser.T__0)
            self.state = 85
            self.match(mlg1Parser.META_VARIABLE_NAME)
            self.state = 86
            self.match(mlg1Parser.INTEGER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeFileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(mlg1Parser.STRING, 0)

        def getRuleIndex(self):
            return mlg1Parser.RULE_includeFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncludeFile" ):
                listener.enterIncludeFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncludeFile" ):
                listener.exitIncludeFile(self)




    def includeFile(self):

        localctx = mlg1Parser.IncludeFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_includeFile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(mlg1Parser.T__1)
            self.state = 89
            self.match(mlg1Parser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoadFileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(mlg1Parser.NAME, 0)

        def STRING(self):
            return self.getToken(mlg1Parser.STRING, 0)

        def getRuleIndex(self):
            return mlg1Parser.RULE_loadFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoadFile" ):
                listener.enterLoadFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoadFile" ):
                listener.exitLoadFile(self)




    def loadFile(self):

        localctx = mlg1Parser.LoadFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_loadFile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(mlg1Parser.T__2)
            self.state = 92
            self.match(mlg1Parser.NAME)
            self.state = 93
            self.match(mlg1Parser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(mlg1Parser.NAME, 0)

        def signedInteger(self):
            return self.getTypedRuleContext(mlg1Parser.SignedIntegerContext,0)


        def getRuleIndex(self):
            return mlg1Parser.RULE_constantDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstantDefinition" ):
                listener.enterConstantDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstantDefinition" ):
                listener.exitConstantDefinition(self)




    def constantDefinition(self):

        localctx = mlg1Parser.ConstantDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_constantDefinition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(mlg1Parser.T__3)
            self.state = 96
            self.match(mlg1Parser.NAME)
            self.state = 97
            self.signedInteger()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SignedIntegerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(mlg1Parser.INTEGER, 0)

        def getRuleIndex(self):
            return mlg1Parser.RULE_signedInteger

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSignedInteger" ):
                listener.enterSignedInteger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSignedInteger" ):
                listener.exitSignedInteger(self)




    def signedInteger(self):

        localctx = mlg1Parser.SignedIntegerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_signedInteger)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 99
                self.match(mlg1Parser.T__4)


            self.state = 102
            self.match(mlg1Parser.INTEGER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(mlg1Parser.NAME, 0)

        def block(self):
            return self.getTypedRuleContext(mlg1Parser.BlockContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(mlg1Parser.ParameterListContext,0)


        def getRuleIndex(self):
            return mlg1Parser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)




    def function(self):

        localctx = mlg1Parser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(mlg1Parser.T__5)
            self.state = 105
            self.match(mlg1Parser.NAME)
            self.state = 106
            self.match(mlg1Parser.T__6)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==30:
                self.state = 107
                self.parameterList()


            self.state = 110
            self.match(mlg1Parser.T__7)
            self.state = 111
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(mlg1Parser.NAME)
            else:
                return self.getToken(mlg1Parser.NAME, i)

        def getRuleIndex(self):
            return mlg1Parser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)




    def parameterList(self):

        localctx = mlg1Parser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(mlg1Parser.NAME)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 114
                self.match(mlg1Parser.T__8)
                self.state = 115
                self.match(mlg1Parser.NAME)
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(mlg1Parser.StatementContext)
            else:
                return self.getTypedRuleContext(mlg1Parser.StatementContext,i)


        def getRuleIndex(self):
            return mlg1Parser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = mlg1Parser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(mlg1Parser.T__9)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1612611584) != 0):
                self.state = 122
                self.statement()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 128
            self.match(mlg1Parser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(mlg1Parser.VariableDeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(mlg1Parser.AssignmentContext,0)


        def arrayDeclaration(self):
            return self.getTypedRuleContext(mlg1Parser.ArrayDeclarationContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(mlg1Parser.FunctionCallContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(mlg1Parser.ReturnStatementContext,0)


        def breakStatement(self):
            return self.getTypedRuleContext(mlg1Parser.BreakStatementContext,0)


        def continueStatement(self):
            return self.getTypedRuleContext(mlg1Parser.ContinueStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(mlg1Parser.IfStatementContext,0)


        def whileLoop(self):
            return self.getTypedRuleContext(mlg1Parser.WhileLoopContext,0)


        def getRuleIndex(self):
            return mlg1Parser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = mlg1Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statement)
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.variableDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 132
                self.arrayDeclaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 133
                self.functionCall()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 134
                self.returnStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 135
                self.breakStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 136
                self.continueStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 137
                self.ifStatement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 138
                self.whileLoop()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE_KEYWORD(self):
            return self.getToken(mlg1Parser.VARIABLE_KEYWORD, 0)

        def NAME(self):
            return self.getToken(mlg1Parser.NAME, 0)

        def expression(self):
            return self.getTypedRuleContext(mlg1Parser.ExpressionContext,0)


        def STRING(self):
            return self.getToken(mlg1Parser.STRING, 0)

        def getRuleIndex(self):
            return mlg1Parser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)




    def variableDeclaration(self):

        localctx = mlg1Parser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_variableDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(mlg1Parser.VARIABLE_KEYWORD)
            self.state = 142
            self.match(mlg1Parser.NAME)
            self.state = 143
            self.match(mlg1Parser.T__11)
            self.state = 146
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5, 7, 21, 30, 31]:
                self.state = 144
                self.expression(0)
                pass
            elif token in [32]:
                self.state = 145
                self.match(mlg1Parser.STRING)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(mlg1Parser.NAME, 0)

        def expression(self):
            return self.getTypedRuleContext(mlg1Parser.ExpressionContext,0)


        def getRuleIndex(self):
            return mlg1Parser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = mlg1Parser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(mlg1Parser.NAME)
            self.state = 149
            self.match(mlg1Parser.T__11)
            self.state = 150
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE_KEYWORD(self):
            return self.getToken(mlg1Parser.VARIABLE_KEYWORD, 0)

        def NAME(self):
            return self.getToken(mlg1Parser.NAME, 0)

        def arraySize(self):
            return self.getTypedRuleContext(mlg1Parser.ArraySizeContext,0)


        def expressionList(self):
            return self.getTypedRuleContext(mlg1Parser.ExpressionListContext,0)


        def getRuleIndex(self):
            return mlg1Parser.RULE_arrayDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayDeclaration" ):
                listener.enterArrayDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayDeclaration" ):
                listener.exitArrayDeclaration(self)




    def arrayDeclaration(self):

        localctx = mlg1Parser.ArrayDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_arrayDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(mlg1Parser.VARIABLE_KEYWORD)
            self.state = 153
            self.match(mlg1Parser.NAME)
            self.state = 154
            self.match(mlg1Parser.T__12)
            self.state = 155
            self.arraySize()
            self.state = 156
            self.match(mlg1Parser.T__13)
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 157
                self.match(mlg1Parser.T__11)
                self.state = 158
                self.match(mlg1Parser.T__12)
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 3223322784) != 0):
                    self.state = 159
                    self.expressionList()


                self.state = 162
                self.match(mlg1Parser.T__13)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraySizeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(mlg1Parser.INTEGER, 0)

        def NAME(self):
            return self.getToken(mlg1Parser.NAME, 0)

        def getRuleIndex(self):
            return mlg1Parser.RULE_arraySize

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArraySize" ):
                listener.enterArraySize(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArraySize" ):
                listener.exitArraySize(self)




    def arraySize(self):

        localctx = mlg1Parser.ArraySizeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_arraySize)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            _la = self._input.LA(1)
            if not(_la==30 or _la==31):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(mlg1Parser.ExpressionContext,0)


        def block(self):
            return self.getTypedRuleContext(mlg1Parser.BlockContext,0)


        def elseStatement(self):
            return self.getTypedRuleContext(mlg1Parser.ElseStatementContext,0)


        def getRuleIndex(self):
            return mlg1Parser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)




    def ifStatement(self):

        localctx = mlg1Parser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.match(mlg1Parser.T__14)
            self.state = 168
            self.expression(0)
            self.state = 169
            self.block()
            self.state = 172
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==16:
                self.state = 170
                self.match(mlg1Parser.T__15)
                self.state = 171
                self.elseStatement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(mlg1Parser.BlockContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(mlg1Parser.IfStatementContext,0)


        def getRuleIndex(self):
            return mlg1Parser.RULE_elseStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElseStatement" ):
                listener.enterElseStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElseStatement" ):
                listener.exitElseStatement(self)




    def elseStatement(self):

        localctx = mlg1Parser.ElseStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_elseStatement)
        try:
            self.state = 176
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 174
                self.block()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 175
                self.ifStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileLoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(mlg1Parser.ExpressionContext,0)


        def block(self):
            return self.getTypedRuleContext(mlg1Parser.BlockContext,0)


        def getRuleIndex(self):
            return mlg1Parser.RULE_whileLoop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileLoop" ):
                listener.enterWhileLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileLoop" ):
                listener.exitWhileLoop(self)




    def whileLoop(self):
